# adventofcode2018

./: adventofcode2018.cabal
data/: day12.txt  day16_1.txt
src/: Common.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day15Tests.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
