name:                adventofcode2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/adventofcode2018#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable adventofcode2018
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs -O0 -fno-warn-type-defaults
                       -fno-warn-name-shadowing
  other-modules:       Day1
                      , Common
                      , Day2
                      , Day3
                      , Day4
                      , Day5
                      , Day6
                      , Day7
                      , Day8
                      , Day9
                      , Day10
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , criterion
                      , containers
                      , vector
                      , regex-pcre-builtin
                      , split
                      , parsec
                      , hex
                      , transformers
                      , either
                      , matrix
                      , primes
                      , text
                      , pointedlist
